--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="totalphonebill.js"></script>
     <script src="totalphonebill-widget.js"></script>
     <script src="word-game.js"></script>
-    <script src="wordGame-widget.js"></script>
+    <script src="word-game-widget.js"></script>
     <script src="https://unpkg.com/alpinejs" defer></script>
     <script>console.log(greet("Vee"))</script>
     <style>
